Add @Override
- Use valueOf()
- Remove redundant parentheses